--- a/views/car/new.ejs
+++ b/views/car/new.ejs
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title>New Car</title>
 </head>
 <body>
-    
+    <%- include("../../partials/nav.ejs") %>
+    <h1>Add a new car to the list</h1>
+    <form action="/cars" method="POST">
+        <div>
+            <label for="manufacturer">Please enter the cars brand or manufacturer</label>
+            <input type="text"name="manufacturer" placeholder="E.g Honda, Mclaren" required>
+        </div>
+
+        <div>
+            <label for="name">Enter the cars model</label>
+            <input type="text"name="name" placeholder="E.g Cayenne, Corolla" required>
+        </div>
+        
+        <div>
+            <label for="manufacture_date">Please specify when this car came into production</label>
+            <input type="date" id="manufacture_date" name="manufacture_date" placeholder="Enter the car model" min="1900-01-01" >
+        </div>
+        <div>
+            <label for="image">Please provide a link to an image of this car</label>
+            <input type="text" name="image" >
+        </div>
+        
+        <div>
+            <label for="description">Additional details</label>
+            <div style="width: 350px; height: 200px;">
+                <input type="text" name="description" style="width: 100%; height: 100%;">
+            </div>
+        </div>
+        
+        
+        <button type="submit">
+            Add Car
+        </button>
+    </form>
+    <script>
+        var today = new Date();
+        var dd = today.getDate();
+        var mm = today.getMonth() + 1; 
+        var yyyy = today.getFullYear();
+
+        if (dd < 10) {
+        dd = '0' + dd;
+        }
+
+        if (mm < 10) {
+        mm = '0' + mm;
+        } 
+            
+        today = yyyy + '-' + mm + '-' + dd;
+        document.getElementById("manufacture_date").setAttribute("max", today);
+    </script>
 </body>
 </html>
