--- a/views/car/show.ejs
+++ b/views/car/show.ejs
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title><%= car.name %></title>
 </head>
 <body>
-    
+    <h1><%= car.name %></h1>
+    <p><%=car.manufacturer%></p>
+    <p><%=car.manufacture_date%></p>
+    <p><%=car.description%></p>
+    <p><%= car.image %></p>
+    <form action="/cars/car._id?_method=DELETE" method="POST">
+        <button type="submit">
+            Remove Car
+        </button>
+    </form>
+    <form action="/cars/car._id/edit" method="POST">
+        <button type="submit">
+            Update Details
+        </button>
+    </form>
 </body>
 </html>
