Changed navigation to edit page from form to anchor

--- a/views/car/show.ejs
+++ b/views/car/show.ejs
@@ -17,10 +17,10 @@
             Remove Car
         </button>
     </form>
-    <form action="/cars/car._id/edit" method="POST">
+    <a href="/cars/<%=car._id%>/edit">
         <button type="submit">
             Update Details
         </button>
-    </form>
+    </a>
 </body>
 </html>
