--- a/views/car/index.ejs
+++ b/views/car/index.ejs
@@ -14,7 +14,8 @@
             <a href="/cars/<%= car._id %>">
                 <div id="car" >
                     <div>
-                        <img src="<%= car.image %>" alt="<%=car.image%>">
+                    <!-- <div style="background-size: cover; background-image: url('<%= car.image %>'); width: 250px; height:200px"> -->
+                        <img src="<%= car.image %>" alt="<%=car.image%>" width="250px" height="200px">
                     </div>
                     <div>
                         <p><%=car.name%></p>
