--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,10 +21,17 @@ h1 {
 }
 
 section{
-    display: grid;
-    justify-content: space-between;
+    display: flex;
+    /* justify-content: space-between; */
+    /* grid-template-columns: auto auto auto; */
+    margin: 50px auto;
+    
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 #car{
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
+    width: 250px;
 }
