--- a/views/quiz_revealed.ejs
+++ b/views/quiz_revealed.ejs
@@ -11,11 +11,12 @@
     <div style="width: 360px; height: 300px;">
         <img src="<%= car.image %>" alt="" style="width: 100%; height: 100%;">
     </div>
-    <form action="/quiz" method="POST">
+    <form action="/quiz/reveal" method="POST">
         <label for="name">Guess the car model from the image</label>
-        <input type="text" name="name" id="" placeholder="E.g  Corolla.  ">
+        <input type="text" name="name" id="" placeholder="E.g  Corolla.  " value="<%= guess %>">
         <button type="submit">Check Answer</button>
     </form>
+    <p><%= car.name.toLowerCase() == guess.toLowerCase() ? "You guessed correctly" : "You guessed incorrectly" %>, it is the <%= car.name %> </p>
     
 </body>
 </html>
